--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,20 +1,37 @@
+/* Font Popins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* Universal */
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     font-family: 'Poppins', sans-serif;
     color: black;
+    margin: 0;
+
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 50px;
+
+    background-color: wheat;
+
+    border-radius: 25px;
+    border-width: 1px;
+    border-color: black;
+
 }
 
 .navbar{
-    display: flex;
-    /* width:100vw; */
-    flex-direction: column;
-    white-space: nowrap;
-    background-color: #C7C7C7;
+    display: flex; justify-content: space-evenly; width: 100vw;
+}
+
+/* Dashboard */
+.header{
+    width: 100vw; background-color: #BABABA;
 }
 
 .background{
@@ -26,16 +43,15 @@ body{
     background-color: rgba(222, 222, 222, 1);
     border-radius: 25px;
 
-    margin-top: 10%;
 }
 
+
+/* Signup and Login */
 .window{
     display: flex;
     flex-flow: column;
     width: 100%; height: 100%;
     justify-content: center;
-    justify-self: center;
-    align-self: center;
     align-items: center;
 
 }
@@ -49,16 +65,6 @@ body{
     margin-top: 2%;
 
     background: #C7C7C7;
-
-    /* position: relative;
-width: 150px;
-height: 150px;
-left: 50%;
-top: 20%;
-
-background: #C7C7C7;
-border-radius: 100px; */
-
 }
 
 .fields{
@@ -102,19 +108,6 @@ border-radius: 100px; */
     text-indent: 5%;
 
     background-color: whitesmoke;
-
-    border-radius: 25px;
-
-}
-
-.buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 50px;
-
-    background-color: wheat;
 
     border-radius: 25px;
 
