--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -45,6 +45,7 @@
 
 .navigation{
     display: flex;
+    flex-direction: row;
     width: 100%;
     height: 75px;
     background-color: rgba(0, 0, 0, 0.75);
@@ -54,36 +55,47 @@
 }
 
 .nav_button{
-    /* display: flex; */
+    display: flex;
     margin: 0;
     width: 20%;
     color: white;
-    text-align: center;
+    justify-content: center;
+
+    font-size: 24px;
+
+    text-decoration: none;
 }
 
+/* sidebar */
 .sidebar{
-    width: 375px;
-    height: 800px;
+    display: flex;
+    width: 20vw;
+    height: 75vh;
+
+    flex-direction: column;
+    justify-content: space-around;
 
     background-color: #D9D9D9;
 }
 
-/* textbox */
-.textbox{
-    display: flex;
-    color: white;
-    
+#sidebar_button{
+    width: 100%;
+    height: auto;
     text-align: center;
+
+    font-size: 20px;
+
 }
 
 /* main window */
 .main_window{
-    display: flex;
 
-    width: 975px;
-    height: 750px;
-
+    width: 65vw;
+    height: 65vh;
 
     background: #D9D9D9;
     border-radius: 25px;
+
+    margin-left: 5vw ;
+    margin-top: 5vh;
 }
