--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -135,3 +135,47 @@ body{
 input:focus::placeholder {
     color: transparent;
   }
+
+/* header */
+.header{
+    display: flex;
+    width: 100%; height: 150px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* company logo and name */
+.company_space{
+    display: flex;
+    width: 300px;
+    height: 100%;
+    align-items: center;
+    margin-left: 2%;
+}
+
+#header_logo{
+    width: 100px; height: 100px; margin-left: 2%;
+}
+
+#company_name{
+    text-indent: 10%; line-height: 50%; font-size: larger;
+}
+
+/* user profile */
+.user_profile{
+    display: flex;
+    height: 100px; width: 250px;
+    align-items: center;
+}
+
+#user_pfp{
+    width: 75px; height: 75px; 
+    background-color: #F6F6F6;
+    border-radius: 100%;
+}
+
+#user_name{
+    text-indent: 10%; line-height: 100%; white-space: nowrap;
+    margin-top: 5%;
+}
+
