--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,181 +1,182 @@
 /* Font Popins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /* Universal */
 
-
-
-body{
-
-    font-family: 'Poppins', sans-serif;
-    color: black;
-    margin: 0px;
-
+body {
+  font-family: "Poppins", sans-serif;
+  color: black;
+  margin: 0px;
 }
 
-.buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 50px;
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 50px;
 
-    background-color: wheat;
+  background-color: wheat;
 
-    border-radius: 25px;
-    border-width: 1px;
-    border-color: black;
-
+  border-radius: 25px;
+  border-width: 1px;
+  border-color: black;
 }
 
-.navbar{
-    display: flex; width: 100vw;
-    justify-content: space-around;
-    
+.navbar {
+  display: flex;
+  width: 100vw;
+  justify-content: space-around;
 }
 
 /* Dashboard */
-.header{
-    width: 100vw; background-color: #BABABA;
+.header {
+  width: 100vw;
+  background-color: #bababa;
 }
 
-.background{
-    display: flex;
+.background {
+  display: flex;
 
-    width: 650px;
-    height: 750px;
+  width: 650px;
+  height: 750px;
 
-    background-color: rgba(222, 222, 222, 1);
-    border-radius: 25px;
+  background-color: rgba(222, 222, 222, 1);
+  border-radius: 25px;
 }
-
 
 /* Signup and Login */
-.window{
-    display: flex;
-    flex-flow: column;
-    width: 100%; height: 100%;
-    justify-content: center;
-    align-items: center;
-
+.window {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-#signup_icon{
-    display: flex;
-    align-self: center;
-    width: 150px;
-    height: 150px;
-    margin-bottom: 10px;
-    margin-top: 2%;
+#signup_icon {
+  display: flex;
+  align-self: center;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10px;
+  margin-top: 2%;
 
-    background: #C7C7C7;
+  background: #c7c7c7;
 }
 
-.fields{
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    width: 500px;
-    height: 40px;
-    margin: 2%;
+.fields {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 500px;
+  height: 40px;
+  margin: 2%;
 
-    text-indent: 5%;
+  text-indent: 5%;
 
-    background-color: whitesmoke;
+  background-color: whitesmoke;
 
-    border-radius: 25px;
-
+  border-radius: 25px;
 }
 
-.image_fields{
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    width: 500px;
-    height: 275px;
-    margin: 2%;
+.image_fields {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 500px;
+  height: 275px;
+  margin: 2%;
 
-    text-indent: 5%;
+  text-indent: 5%;
 
-    background-color: whitesmoke;
+  background-color: whitesmoke;
 
-    border-radius: 25px;
-
+  border-radius: 25px;
 }
 
-.pfp_fields{
-    display: flex;
-    width: 275px;
-    height: 275px;
-    margin: 2%;
+.pfp_fields {
+  display: flex;
+  width: 275px;
+  height: 275px;
+  margin: 2%;
 
-    text-indent: 5%;
+  text-indent: 5%;
 
-    background-color: whitesmoke;
+  background-color: whitesmoke;
 
-    border-radius: 25px;
-
+  border-radius: 25px;
 }
 
-#title{
-    font-family: 'Poppins', sans-serif;
-    color: black;
-    margin-bottom: 5%;
+#title {
+  font-family: "Poppins", sans-serif;
+  color: black;
+  margin-bottom: 5%;
 }
 
-#text{
+#text {
+  align-self: center;
+  vertical-align: middle;
 
-    align-self: center;
-    vertical-align:middle;
-
-    font-family: 'Poppins', sans-serif;
-    color: black;
+  font-family: "Poppins", sans-serif;
+  color: black;
 }
 
 input:focus::placeholder {
-    color: transparent;
-  }
+  color: transparent;
+}
 
 /* header */
-.header{
-    display: flex;
-    width: 100%; height: 150px;
-    align-items: center;
-    justify-content: space-between;
+.header {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* company logo and name */
-.company_space{
-    display: flex;
-    width: 300px;
-    height: 100%;
-    align-items: center;
-    margin-left: 2%;
+.company_space {
+  display: flex;
+  width: 300px;
+  height: 100%;
+  align-items: center;
+  margin-left: 2%;
 }
 
-#header_logo{
-    width: 100px; height: 100px; margin-left: 2%;
+#header_logo {
+  width: 100px;
+  height: 100px;
+  margin-left: 2%;
 }
 
-#company_name{
-    text-indent: 10%; line-height: 50%; font-size: larger;
+#company_name {
+  text-indent: 10%;
+  line-height: 50%;
+  font-size: larger;
 }
 
 /* user profile */
-.user_profile{
-    display: flex;
-    height: 100px; width: 250px;
-    align-items: center;
+.user_profile {
+  display: flex;
+  height: 100px;
+  /* width: 250px; */
+  align-items: center;
+  margin-right: 1em;
 }
 
-#user_pfp{
-    width: 75px; height: 75px; 
-    background-color: #F6F6F6;
-    border-radius: 100%;
+#user_pfp {
+  width: 75px;
+  height: 75px;
+  background-color: #f6f6f6;
+  border-radius: 100%;
+  margin-right: 1em;
 }
 
-#user_name{
-    text-indent: 10%; line-height: 100%; white-space: nowrap;
-    margin-top: 5%;
+#user_name {
+  /* text-indent: 10%; */
+  line-height: 100%;
+  white-space: nowrap;
+  margin-top: 5%;
 }
-
