--- a/src/assets/dashboard.css
+++ b/src/assets/dashboard.css
@@ -1,3 +1,10 @@
+body{
+    font-family: 'Poppins', sans-serif;
+    color: black;
+
+    margin: 0;
+}
+
 /* header */
 .header{
     display: flex;
