--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -131,7 +131,8 @@ input:focus::placeholder {
 .header {
   display: flex;
   width: 100%;
-  height: 150px;
+  /* height: 150px; */
+  min-height: 18vh;
   align-items: center;
   justify-content: space-between;
 }
@@ -149,6 +150,9 @@ input:focus::placeholder {
   width: 100px;
   height: 100px;
   margin-left: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #company_name {
@@ -167,8 +171,11 @@ input:focus::placeholder {
 }
 
 #user_pfp {
-  width: 75px;
-  height: 75px;
+  /* width: 75px; */
+  /* height: 75px; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
   background-color: #f6f6f6;
   border-radius: 100%;
   margin-right: 1em;
@@ -178,5 +185,7 @@ input:focus::placeholder {
   /* text-indent: 10%; */
   line-height: 100%;
   white-space: nowrap;
-  margin-top: 5%;
+  /* margin-top: 5%; */
+  display: flex ;
+
 }
